--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <groupId>org.liquibase.ext</groupId>
     <artifactId>liquibase-teradata</artifactId>
     <name>Liquibase Teradata extension</name>
-    <version>3.0</version>
+    <version>3.1-SNAPSHOT</version>
     <description>Adds support for Teradata Database to Liquibase</description>
     <url>http://www.liquibase.org</url>
 
