--- a/pom.xml
+++ b/pom.xml
@@ -48,8 +48,7 @@
         <dependency>
             <groupId>org.liquibase</groupId>
             <artifactId>liquibase-core</artifactId>
-			<version>3.2.0</version>
-            <scope>provided</scope>
+			<version>3.3.1-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
