--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,7 @@
         <dependency>
             <groupId>org.liquibase</groupId>
             <artifactId>liquibase-core</artifactId>
-			<version>3.3.1-SNAPSHOT</version>
+			<version>3.3.1</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
