--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <groupId>org.liquibase.ext</groupId>
     <artifactId>liquibase-teradata</artifactId>
     <name>Liquibase Teradata extension</name>
-    <version>3.2-SNAPSHOT</version>
+    <version>3.2.1-SNAPSHOT</version>
     <description>Adds support for Teradata Database to Liquibase</description>
     <url>http://www.liquibase.org</url>
 
@@ -28,6 +28,10 @@
 		<connection>scm:git:git@github.com:liquibase/liquibase-teradata.git</connection>
 		<url>https://github.com/liquibase/liquibase-teradata</url>
     </scm>
+    
+    <prerequisites>
+       <maven>3.0.5</maven>
+   	</prerequisites>
 
     <developers>
         <developer>
@@ -69,6 +73,7 @@
             <plugins>
                 <plugin>
                     <artifactId>maven-compiler-plugin</artifactId>
+                    <version>3.8.0</version>
                     <configuration>
                         <source>1.6</source>
                         <target>1.6</target>
@@ -81,7 +86,7 @@
                 <plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-release-plugin</artifactId>
-                    <version>2.2.2</version>
+                    <version>2.5.3</version>
 					<configuration>
                         <stagingRepository>/tmp/maven-snapshot</stagingRepository>
 						<mavenExecutorId>forked-path</mavenExecutorId>
@@ -126,6 +131,19 @@
 								</rules>
 							</configuration>
 						</execution>
+				          <execution>
+				            <id>enforce-maven</id>
+				            <goals>
+				              <goal>enforce</goal>
+				            </goals>
+				            <configuration>
+				              <rules>
+				                <requireMavenVersion>
+				                  <version>3.0.5</version>
+				                </requireMavenVersion>
+				              </rules>    
+				            </configuration>
+				          </execution>
 					</executions>
 				</plugin>
             </plugins>
