--- a/pom.xml
+++ b/pom.xml
@@ -59,7 +59,7 @@
 		<dependency>
 			<groupId>org.liquibase</groupId>
 			<artifactId>liquibase-core</artifactId>
-			<version>4.0.0-beta1</version>
+			<version>3.8.9</version>
 		</dependency>
 
 		<dependency>
