--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
 	<scm>
 		<connection>scm:git:http://github.com/liquibase/liquibase-teradata.git</connection>
 		<url>https://github.com/liquibase/liquibase-teradata</url>
-		<tag>liquibase-teradata-4.0.0-beta2</tag>
+		<tag>HEAD</tag>
 	</scm>
 
 	<developers>
